# fbsd-netcf

./: .gitignore  AUTHORS  FreeBSD-TODO  HACKING  INSTALL  Makefile.am  Makefile.maint  NEWS  NOTES  README  acinclude.m4  autobuild.sh  autogen.sh  bootstrap  bootstrap.conf  configure.ac  mingw32-netcf.spec.in  netcf-wininst.nsi  netcf.pc.in  netcf.spec.in
data/: iptables-forward-bridged
data/lenses/: netcf.aug  persist_net_rules.aug  routes.aug
data/xml/: debian-get.xsl  debian-put.xsl  initscripts-get.xsl  initscripts-put.xsl  interface.rng  redhat-get.xsl  redhat-put.xsl  schemas.xml  suse-get.xsl  suse-put.xsl  util-get.xsl  util-put.xsl
doc/: Makefile  Makefile.am  announce.txt  debian.txt  interface.rng  nesting.dot  outline.txt
doc/examples/: bond.xml  bridge.xml  ethernet-dhcp.xml  ethernet-static.xml  schemas.xml
gnulib/lib/: Makefile.am
src/: Makefile.am  drv_debian.c  drv_fbsd.c  drv_freebsd.c  drv_initscripts.c  drv_mswindows.c  drv_redhat.c  drv_suse.c  dutil.c  dutil.h  dutil_fbsd.c  dutil_fbsd.h  dutil_freebsd.h  dutil_linux.c  dutil_linux.h  dutil_mswindows.h  dutil_posix.c  dutil_posix.h  internal.h  list.h  ncftool.c  ncftool.pod  ncftransform.c  netcf-transaction.init.sh  netcf.c  netcf.h  netcf_private.syms  netcf_public.syms  netcf_sym.version  ref.h  try  xslt_ext.c
tests/: Makefile.am  cutest.c  mock-freebsd.c  test-debian.c  test-freebsd.c  test-initscripts.c  test-redhat.c  test-suse.c  tutil.c  tutil.h
tests/debian/fsroot/etc/network/: interfaces
tests/debian/schema/: bond-arp.xml  bond-defaults.xml  bond.xml  bridge-bond.xml  bridge-empty.xml  bridge-no-address.xml  bridge-vlan.xml  bridge.xml  ethernet-dhcp.xml  ethernet-static-no-prefix.xml  ethernet-static.xml  ipv6-autoconf-dhcp.xml  ipv6-autoconf.xml  ipv6-dhcp.xml  ipv6-local.xml  ipv6-static-multi.xml  ipv6-static.xml  vlan.xml
tests/initscripts/: bond-arp.xml  bond.xml  bridge-vlan.xml  bridge.xml  ethernet-dhcp.xml  ethernet-static.xml  ipv6-local.xml  ipv6-static-multi.xml  schemas.xml
tests/interface/: bond-arp.xml  bond-defaults.xml  bond.xml  bridge-bond.xml  bridge-empty.xml  bridge-no-address.xml  bridge-vlan.xml  bridge.xml  bridge42.xml  ethernet-dhcp.xml  ethernet-static-no-prefix.xml  ethernet-static.xml  ipv6-autoconf-dhcp.xml  ipv6-autoconf.xml  ipv6-dhcp.xml  ipv6-local.xml  ipv6-static-multi.xml  ipv6-static.xml  schemas.xml  vlan.xml
tests/redhat/: bond-defaults.xml  bridge-empty.xml  ipv6-autoconf-dhcp.xml
tests/redhat/fsroot/etc/sysconfig/: system-config-firewall
tests/redhat/schema/: bridge-bond.xml  bridge-no-address.xml  bridge.xml  ethernet-dhcp.xml  ethernet-static-no-prefix.xml  ipv6-dhcp.xml  ipv6-static.xml  vlan.xml
tests/root/etc/sysconfig/: iptables
tests/root/etc/sysconfig/network-scripts/: ifcfg-bond0  ifcfg-br0
tests/root/sys/class/net/eth4/: address
tests/suse/fsroot/sys/class/net/br0/: address
tests/suse/schema/: bond-arp.xml  bond.xml  bridge-no-address.xml  bridge-vlan.xml  bridge.xml  ipv6-autoconf.xml  schemas.xml  vlan.xml
xml/: Makefile  augeas.rng  initscripts-get.xsl  initscripts-put.xsl  interface.rng
