## Makefile for gnulib/lib				-*-Makefile-*-

## Copyright (C) 2011-	2012 Red Hat, Inc.
## See COPYING.LIB for the License of this software

# Keep automake happy by priming variables that gnulib only appends to
BUILT_SOURCES=
EXTRA_DIST=
MOSTLYCLEANDIRS=
MOSTLYCLEANFILES=
noinst_LTLIBRARIES=

include gnulib.mk

INCLUDES = $(GETTEXT_CPPFLAGS)
